@@ -1,6 +1,7 @@
 Release ()
 ------------------------------------
 * Window组件新增beforeclose事件
+* Table添加checkbox编辑器
 
 Release (2011-04-27)
 ------------------------------------
